--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
@@ -247,7 +247,7 @@
 ========================================================================== */
 
 .action-bar {
-	margin: 0 0 10px 0;
+	margin: 0 0 20px 0;
 	@include flex-flow(row nowrap);
 	align-items: center;
 	& > * {
@@ -263,7 +263,7 @@
 		flex: 0 0 300px;
 	}
 	&.actions-jump {
-		margin: $main-margin 0;
+		margin: 20px 0 $main-margin 0;
 		.jumpbox-return .icon {
 			width: auto;
 			margin: 0 5px 0 0;
