--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_other-sections.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_other-sections.scss
@@ -38,7 +38,6 @@ dl.faq {
 
 .section-search {
 	.searchresults-title ~ .advanced-search-link {
-		margin: $main-margin 0;
 		.icon {
 			width: auto;
 			margin: 0 5px 0 0;
